--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,11 +42,10 @@
       Camara Authorized
     </ion-button>
     <p>Cam authorization: {{authorization}}</p>
-    <!-- <ion-button (click)="camaraStatus()" color="success">Camara Sta</ion-button>
+    <!-- <ion-button (click)="camaraStatus()" color="success">Camara Sta</ion-button>-->
 
-      <ion-button (click)="camaraR()" color="success">Camara R</ion-button> -->
+    <ion-button (click)="camaraR()" color="success">Camara R</ion-button>
 
-    <ion-button (click)="media2()" color="danger">Get media2</ion-button>
     <ion-button (click)="foto()" color="danger">foto</ion-button>
 
     <br />
