--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,31 +1,71 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content{
+  --background: darkslategray;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+
+
+.jumbotron{
+  background: darkslategray;
+  color: white;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+button{
+  width: 10rem;
+  margin: .2rem;
+}
+.texto{
+  color: moccasin;
+}
+.noShow{
+  display: none !important;
+ }
 
-  color: #8c8c8c;
-
-  margin: 0;
+.show{
+  display: block !important;
 }
 
-#container a {
-  text-decoration: none;
+.steal{
+  display: none;
 }
 
-ion-content ion-toolbar {
-  --background: translucent;
+.noSteal{
+  display: block;
+    background: white;
+    color: darkgreen;
+    font-weight: 600;
+    border-radius: 15px;
+    width: 15em;
+    box-shadow: 0px 0px 12px wheat;
+}
+
+.invi{
+  display: none;
+}
+
+
+ion-footer{
+  background: darkslategray;
+}
+
+.wifiOn{
+  display: block;
+  width: 3rem;
+    height: 3rem;
+    color: lightgreen;
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -2.5rem;
+}
+
+
+.wifiOff{
+  display: block;
+  width: 3rem;
+    height: 3rem;
+    color: red;
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -2.5rem;
 }
